text alignment fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -791,7 +791,7 @@ footer {
     .exercise_img_description {
         top: 70%;
         font-size: 0.6rem;
-        font-weight: 300;
+        font-weight: 400;
         left: 5%;
     }
 
